# tictactoe

./: README.md  board.py  bot_random.py  main.py  player.py  pyproject.toml  setup.cfg  test_board.py  test_player.py
tests/: test_board.py  test_player.py
tictactoe/: bot_random.py  player.py
