[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]
docs_require = ["sphinx"]
tests_require = ["tox"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py
requires = tox-venv

[testenv]
#deps = pytest >= 3.0.0, <4
commands = python -m unittest

[testenv:build_docs]
extras = docs
commands = sphinx-build docs docs/_build/html -W -b html {posargs}
"""
